Add ExerciseCatalogService for business logic